--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
         <title>Rock Paper Scissors</title>
         <script src="js/script.js"></script>
         <link rel="stylesheet" href="css/style.css">
+        <!-- <link rel="shortcut icon" href="#"> -->
     </head>
     <body>
         <div class="header">
             <h1>Rock Paper Scissors</h1>
         </div>
         
-        <p>Let's play a game! First to 5 points wins!</p>
+        <p>Let's play a game! 5 round match, most scores win!</p>
+        <!-- <img class="ending" src="img/udied.gif" alt="u dead son" id="ending"> -->
         <div class="scoreboard">
-            <div class="scoreboard__name scoreboard__name--one">${playerOneName}</div>
-            <div class="scoreboard__name scoreboard__name--two">${playerTwoName}</div>
-            <div class="scoreboard__score" data-for-player="one">0</div>
-            <div class="scoreboard__score" data-for-player="two">0</div>
+            <div class="sb_names">
+                <div class="scoreboard__name scoreboard__name--one">Player</div>
+                <div class="scoreboard__name scoreboard__name--two">Computer</div>
+            </div>
+            <div class="sb_points">
+                <div class="scoreboard__score" id="player_score">0</div>
+                <div class="scoreboard__score" id="computer_score">0</div>
+            </div>
         </div>
 
-        <!-- <script type="module" src="js/script.js"></script> -->
-        
+        <div class ="oops" id="ending"></div>
+
+
 
         <input type="button" class ="gamebutton" onclick="computerPlay(0);" value="Rock">
         <input type="button" class ="gamebutton" onclick="computerPlay(1);" value="Paper">
